[gd_scene load_steps=52 format=2]

[ext_resource path="res://img/character/p2_1.png" type="Texture" id=1]
[ext_resource path="res://img/boton_compra_b.png" type="Texture" id=2]
[ext_resource path="res://img/token.png" type="Texture" id=3]
[ext_resource path="res://img/boton_compra.png" type="Texture" id=4]
[ext_resource path="res://fonts/Jaro-Regular-VariableFont_opsz.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/back.tscn" type="PackedScene" id=6]
[ext_resource path="res://img/character/p1_1.png" type="Texture" id=7]
[ext_resource path="res://img/character/p1_10.png" type="Texture" id=8]
[ext_resource path="res://img/character/p1_12.png" type="Texture" id=9]
[ext_resource path="res://img/character/p1_19.png" type="Texture" id=10]
[ext_resource path="res://img/character/p1_9.png" type="Texture" id=11]
[ext_resource path="res://img/character/p1_3.png" type="Texture" id=12]
[ext_resource path="res://img/character/p1_2.png" type="Texture" id=13]
[ext_resource path="res://img/character/p1_4.png" type="Texture" id=14]
[ext_resource path="res://img/character/p1_5.png" type="Texture" id=15]
[ext_resource path="res://img/character/p1_18.png" type="Texture" id=16]
[ext_resource path="res://img/character/p1_6.png" type="Texture" id=17]
[ext_resource path="res://img/character/p1_7.png" type="Texture" id=18]
[ext_resource path="res://img/character/p1_8.png" type="Texture" id=19]
[ext_resource path="res://img/character/p1_13.png" type="Texture" id=20]
[ext_resource path="res://img/character/p1_14.png" type="Texture" id=21]
[ext_resource path="res://img/character/p1_11.png" type="Texture" id=22]
[ext_resource path="res://img/character/p1_15.png" type="Texture" id=23]
[ext_resource path="res://img/character/p1_16.png" type="Texture" id=24]
[ext_resource path="res://img/character/p1_17.png" type="Texture" id=25]
[ext_resource path="res://img/character/p2_12.png" type="Texture" id=26]
[ext_resource path="res://img/character/p2_3.png" type="Texture" id=27]
[ext_resource path="res://img/character/p2_5.png" type="Texture" id=28]
[ext_resource path="res://img/character/p2_4.png" type="Texture" id=29]
[ext_resource path="res://img/character/p2_17.png" type="Texture" id=30]
[ext_resource path="res://img/character/p2_18.png" type="Texture" id=31]
[ext_resource path="res://img/character/p2_19.png" type="Texture" id=32]
[ext_resource path="res://img/character/p2_10.png" type="Texture" id=33]
[ext_resource path="res://img/character/p2_11.png" type="Texture" id=34]
[ext_resource path="res://img/character/p2_13.png" type="Texture" id=35]
[ext_resource path="res://img/character/p2_14.png" type="Texture" id=36]
[ext_resource path="res://img/character/p2_15.png" type="Texture" id=37]
[ext_resource path="res://img/character/p2_7.png" type="Texture" id=38]
[ext_resource path="res://img/character/p2_6.png" type="Texture" id=39]
[ext_resource path="res://img/character/p2_2.png" type="Texture" id=40]
[ext_resource path="res://img/character/p2_16.png" type="Texture" id=41]
[ext_resource path="res://img/character/p2_8.png" type="Texture" id=42]
[ext_resource path="res://img/character/p2_9.png" type="Texture" id=43]
[ext_resource path="res://script/shop.gd" type="Script" id=44]
[ext_resource path="res://img/boton_equipar.png" type="Texture" id=45]
[ext_resource path="res://img/boton_equipado.png" type="Texture" id=46]
[ext_resource path="res://img/boton_adquirido.png" type="Texture" id=47]
[ext_resource path="res://song/coin.wav" type="AudioStream" id=48]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 40 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 39 ), ExtResource( 38 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 26 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 41 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ) ],
"loop": true,
"name": "jump2",
"speed": 30.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default2",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 22 ), ExtResource( 9 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 16 ), ExtResource( 10 ) ],
"loop": true,
"name": "jump",
"speed": 30.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 27
font_data = ExtResource( 5 )

[node name="shop" type="Node2D"]
script = ExtResource( 44 )

[node name="Node2D" parent="." instance=ExtResource( 6 )]
position = Vector2( 56, 552 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 200, 128 )
frames = SubResource( 1 )
animation = "jump"
frame = 3
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 584, 128 )
frames = SubResource( 1 )
animation = "jump2"
frame = 5
playing = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 664, 280 )
scale = Vector2( 0.36, 0.36 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 1240, 88 )
scale = Vector2( 0.36, 0.36 )
texture = ExtResource( 3 )

[node name="tokens" type="Label" parent="."]
margin_left = 1144.0
margin_top = 56.0
margin_right = 1184.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="comprarb_2" type="Sprite" parent="."]
position = Vector2( 592, 352 )
scale = Vector2( 0.240002, 0.240002 )
texture = ExtResource( 2 )

[node name="adquirido_2" type="Sprite" parent="."]
position = Vector2( 592, 352 )
scale = Vector2( 0.240002, 0.240002 )
texture = ExtResource( 47 )

[node name="equipado_1" type="Sprite" parent="."]
position = Vector2( 200, 424 )
scale = Vector2( 0.240002, 0.240002 )
texture = ExtResource( 46 )

[node name="comprar_2" type="TouchScreenButton" parent="."]
position = Vector2( 496, 320 )
scale = Vector2( 0.240002, 0.240002 )
normal = ExtResource( 4 )

[node name="equipar_1" type="TouchScreenButton" parent="."]
position = Vector2( 104, 392 )
scale = Vector2( 0.240002, 0.240002 )
normal = ExtResource( 45 )

[node name="equipado_2" type="Sprite" parent="."]
position = Vector2( 592, 416 )
scale = Vector2( 0.240002, 0.240002 )
texture = ExtResource( 46 )

[node name="equipar_2" type="TouchScreenButton" parent="."]
position = Vector2( 496, 384 )
scale = Vector2( 0.240002, 0.240002 )
normal = ExtResource( 45 )

[node name="adquirido_1" type="Sprite" parent="."]
position = Vector2( 200, 352 )
scale = Vector2( 0.240002, 0.240002 )
texture = ExtResource( 47 )

[node name="precio_2" type="Label" parent="."]
margin_left = 608.0
margin_top = 264.0
margin_right = 648.0
margin_bottom = 298.0
custom_fonts/font = SubResource( 3 )
text = "20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sonido_e" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 48 )
[connection signal="pressed" from="comprar_2" to="." method="_on_comprar_2_pressed"]
[connection signal="pressed" from="equipar_1" to="." method="_on_equipar_1_pressed"]
[connection signal="pressed" from="equipar_2" to="." method="_on_equipar_2_pressed"]
